# flight-finder

./: .gitignore  CLAUDE.md  README.md  lakers_flight_results.md  lakers_schedule.csv  pyproject.toml
.claude/skills/lakers-flights/: SKILL.md
.claude/skills/search-flights/: SKILL.md
src/flight_finder/: __init__.py  cli.py  ranking.py  scraper.py
tests/: test_integration.py  test_ranking.py  test_scraper.py
