[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-finder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fast-flights>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
flight-finder = "flight_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
